final-project/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopsphere
  labels:
    course: kubernetes-zero-to-hero
    project: shopsphere
    environment: production-like
