final-project/manifests/11-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: shopsphere
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: shopsphere
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: shopsphere
        app.kubernetes.io/component: frontend
        app.kubernetes.io/version: v1
    spec:
      serviceAccountName: app-runner
      automountServiceAccountToken: false
      containers:
        - name: frontend
          image: busybox:1.36
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c"]
          args:
            - |
              cp /config/index.html /www/index.html
              echo "ok" > /www/healthz
              echo "ready" > /www/ready
              httpd -f -p 8080 -h /www
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: web-root
              mountPath: /www
            - name: frontend-config
              mountPath: /config
              readOnly: true
      volumes:
        - name: web-root
          emptyDir: {}
        - name: frontend-config
          configMap:
            name: shopsphere-config
            items:
              - key: index.html
                path: index.html
