final-project/manifests/08-orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-api
  namespace: shopsphere
  labels:
    app.kubernetes.io/name: orders-api
    app.kubernetes.io/part-of: shopsphere
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: orders-api
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8080
      targetPort: http
