final-project/manifests/12-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: shopsphere
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: shopsphere
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30090
